# model-training

./: .coveragerc  .flake8  .gitignore  .pylintrc  LICENSE  Makefile  README.md  dvc.yaml  dynamic_version.txt  make.txt  metrics.json  params.yaml  pyproject.toml  requirements.txt  setup.py
.dvc/: config
.github/workflows/: ml-test.yml  release.yml  versioning.yml
bow/: c1_BoW_Sentiment_Model.pkl
data/processed/: metamorphic_data.tsv
docs/: mkdocs.yml
docs/docs/: index.md
model-training/: training.py
model_training/: __init__.py  config.py  dataset.py  evaluate.py  features.py  plots.py  preprocessing.py  train.py  training.py
model_training/modeling/: ensure_versioning.py  evaluate.py  predict.py  train.py
tests/: conftest.py  test_data.py  test_data_and_features.py  test_metamorphic.py  test_model_development.py  test_model_file_loadable.py  test_monitoring.py  test_mutamorphic.py
tests/utils/: log_metrics.py
