[tool.poetry]
name = "model-training"
version = "0.0.3"
description = "Sentiment analysis model training."
authors = ["team1"]
readme = "README.md"
packages = [{include = "model_training"}]  # Explicitly declare packages to include

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
scikit-learn = "^1.6.1"          # Equivalent to ">=1.6.1,<2.0.0"
joblib = "^1.4.2"                # Poetry's caret (^) notation simplifies versioning
pandas = "^2.2.3"
numpy = "^2.2.5"
setuptools = "^80.1.0"
setuptools-scm = "^8.3.1"
gdown = "^5.2.0"
loguru = "^0.7.3"
typer = "^0.15.4"
dotenv = "^0.9.9"         # Fixed package name (PyPI uses "python-dotenv", not "dotenv")
nltk = "^3.8.1"
dvc = "^3.59.2"
lib-ml = {git = "https://github.com/remla25-team1/lib-ml.git", tag = "v0.0.1"}

[build-system]
requires = ["poetry-core>=2.0.0"]  # Removed upper bound (<3.0.0) for compatibility
build-backend = "poetry.core.masonry.api"