[tool.poetry]
name = "model-training"
version = "0.0.3"
description = "Sentiment analysis model training."
authors = ["team1"]
readme = "README.md"
packages = [{include = "model_training"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
scikit-learn = "^1.6.1"
joblib = "^1.4.2"
pandas = "^2.2.3"
numpy = "^2.2.5"
setuptools = "^80.1.0"
setuptools-scm = "^8.3.1"
gdown = "^5.2.0"
loguru = "^0.7.3"
typer = "^0.15.4"
python-dotenv = "^0.21.1"
nltk = "^3.8.1"
dvc = "^3.59.2"
lib-ml = {git = "https://github.com/remla25-team1/lib-ml.git", rev = "main"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-cov = "^5.0.0"
flake8 = "^7.0.0"
black = "^24.4.2"
isort = "^5.13.2"
pylint = "^3.1.0"
coverage = "^7.5.0"
mypy = "^1.10.0"
autoflake = "^1.4.0"
docformatter = "^1.7.5" 

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

# Optional configuration for docformatter
[tool.docformatter]
wrap-summaries = 88
wrap-descriptions = 88
pre-summary-newline = true
make-summary-multi-line = false
